[package]
name = "aws-create-user"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_core = "0.47.0"
rusoto_ecr = "0.47.0"
rusoto_iam = "0.47.0"
tokio = { version = "1.17.0", features = ["full"] }
